--- a/transmart-r/Vagrantfile
+++ b/transmart-r/Vagrantfile
@@ -3,7 +3,8 @@
 VAGRANTFILE_API_VERSION = "2"
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
-  config.vm.box = "centos6.4"
+  #vagrant box add centos6.4 https://github.com/2creatives/vagrant-centos/releases/download/v6.4.2/centos64-x86_64-20140116.box
+  config.vm.box = ENV['UBUNTU'] ? "ubuntu/trusty64" : "centos6.4"
 
   config.vm.provider "virtualbox" do |v|
 		v.cpus = 4
