--- a/transmart-r/Vagrantfile
+++ b/transmart-r/Vagrantfile
@@ -3,8 +3,10 @@
 VAGRANTFILE_API_VERSION = "2"
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
-  #vagrant box add centos6.4 https://github.com/2creatives/vagrant-centos/releases/download/v6.4.2/centos64-x86_64-20140116.box
   config.vm.box = ENV['UBUNTU'] ? "ubuntu/trusty64" : "centos6.4"
+  unless ENV['UBUNTU']
+    config.vm.box_url = https://github.com/2creatives/vagrant-centos/releases/download/v6.4.2/centos64-x86_64-20140116.box
+  end
 
   config.vm.provider "virtualbox" do |v|
 		v.cpus = 4
