--- a/transmart-r/Vagrantfile
+++ b/transmart-r/Vagrantfile
@@ -5,7 +5,7 @@ VAGRANTFILE_API_VERSION = "2"
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.box = ENV['UBUNTU'] ? "ubuntu/trusty64" : "centos6.4"
   unless ENV['UBUNTU']
-    config.vm.box_url = https://github.com/2creatives/vagrant-centos/releases/download/v6.4.2/centos64-x86_64-20140116.box
+    config.vm.box_url = 'https://github.com/2creatives/vagrant-centos/releases/download/v6.4.2/centos64-x86_64-20140116.box'
   end
 
   config.vm.provider "virtualbox" do |v|
