--- a/ubuntu_packages/Vagrantfile
+++ b/ubuntu_packages/Vagrantfile
@@ -18,5 +18,6 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
 	config.vm.provider "virtualbox" do |v|
 		v.cpus = 4
+    v.memory = 4096
 	end
 end
