netatalk3: compile in more features

--- a/ubuntu_packages/netatalk3/Makefile
+++ b/ubuntu_packages/netatalk3/Makefile
@@ -1,12 +1,13 @@
 NAME         := netatalk3
 VERSION      = 3.1.7.20150824-a57afbb
-ITERATION    := 5
+ITERATION    := 6
 SOURCE_URL   := https://github.com/Netatalk/Netatalk/archive/a57afbbccf3e55cf2e939ad1d88c7b2b0ec8f0c5.tar.gz
 FETCHED_FILE := $(NAME)-$(VERSION).tar.gz
-DEPENDS      := "openssl" "avahi-daemon" "libcrack2" "libdb6.0" "libacl1"
+DEPENDS      := "openssl" "avahi-daemon" "libcrack2" "libdb6.0" "libacl1" \
+	            "libgcrypt20" "libwrap0"
 BUILDDEPENDS := "libssl-dev" "libavahi-client-dev" "autoconf" "automake" \
-	            "bison" "libtool" "pkg-config" "libcrack2-dev" "libc-dev" \
-				"libdb6.0-dev" "libacl1-dev"
+                "bison" "libtool" "pkg-config" "libcrack2-dev" "libc-dev" \
+                "libdb6.0-dev" "libacl1-dev" "libgcrypt20-dev" "libwrap0-dev"
 CONFLICTS    := "netatalk"
 
 PACKAGE_URL := https://github.com/simonvetter/afpfs-ng
@@ -40,6 +41,8 @@ build:
 		--with-acls \
 		--with-cracklib \
 		--with-cnid-cdb-backend \
+		--with-libgcrypt \
+		--enable-tcp-wrappers \
 		--enable-pgp-uam
 	$(MAKE) -C '$(SBUILDDIR)'
 	$(MAKE) -C '$(SBUILDDIR)' install DESTDIR='$(SDESTDIR)'
