--- a/ubuntu_packages/ntimed/ntimed.conf
+++ b/ubuntu_packages/ntimed/ntimed.conf
@@ -4,11 +4,11 @@ start on (started networking)
 stop on runlevel [!2345]
 
 script
-    if [ -f /etc/default/rserve ]; then
-       . /etc/default/rserve
+    if [ -f /etc/default/ntimed ]; then
+       . /etc/default/ntimed
     fi
     if [ -z "$SERVERS" ]; then
-       SERVERS='pool.ntp.org'
+       SERVERS='0.europe.pool.ntp.org 1.europe.pool.ntp.org 2.europe.pool.ntp.org 3.europe.pool.ntp.org'
     fi
 
     exec /usr/bin/ntimed-client $SERVERS
