--- a/ubuntu_packages/log-courier/Makefile
+++ b/ubuntu_packages/log-courier/Makefile
@@ -1,6 +1,6 @@
 NAME         := log-courier
-VERSION      = 1.8.1
-ITERATION    := 9
+VERSION      := 1.8.2
+ITERATION    := $(shell facter lsbdistcodename)6
 SOURCE_URL   := https://github.com/driskell/log-courier/archive/v$(VERSION).tar.gz
 FETCHED_FILE := $(NAME)-$(VERSION).tar.gz
 BUILDDEPENDS := "git"
@@ -10,7 +10,9 @@ PACKAGE_DESCRIPTION := Log Courier, a lightweight log shipper with Logstash inte
 
 POSTINSTALL := log-courier.postinst
 POSTUNINSTALL := log-courier.postrm
-FPM_ARGS := --deb-upstart $(shell pwd)/log-courier.upstart
+UPSTART_FILE := $(shell pwd)/log-courier.upstart
+SYSTEMD_FILE := $(shell pwd)/log-courier.service
+
 GO_VERSION := 1.4.2
 
 include ../include/base.mk
@@ -22,10 +24,11 @@ extract: standard_extract
 
 SHELL := /bin/bash
 
-build: $(LIBLOGGING_LIB)
+build:
 	PATH=$(PATH) $(MAKE) -C '$(SBUILDDIR)'
-	mkdir -p '$(SDESTDIR)'{/etc/log-courier.d/,/usr/bin,/var/lib/log-courier}
+	mkdir -p '$(SDESTDIR)'{/etc/log-courier.d/,/etc/default,/usr/bin,/var/lib/log-courier}
 	install -D -m600 '$(shell pwd)'/usr.bin.log-courier '$(SDESTDIR)'/etc/apparmor.d/usr.bin.log-courier
 	install -s -m755 -t '$(SDESTDIR)'/usr/bin '$(SBUILDDIR)'/bin/*
+	touch '$(SDESTDIR)'/etc/default/log-courier
 
 package: standard_package
