--- a/ubuntu_packages/ntimed/ntimed.service
+++ b/ubuntu_packages/ntimed/ntimed.service
@@ -1,9 +1,11 @@
 [Unit]
 Description=Network time protocol client
+After=network-online.target
 
 [Service]
 Environment="SERVERS=0.europe.pool.ntp.org 1.europe.pool.ntp.org 2.europe.pool.ntp.org 3.europe.pool.ntp.org"
 ExecStart=/usr/bin/ntimed-client $SERVERS
+Restart=always
 
 [Install]
-Requires/After=network-online.target
+WantedBy=multi-user.target
