simp-le needs python2.7

--- a/ubuntu_packages/simp-le/Makefile
+++ b/ubuntu_packages/simp-le/Makefile
@@ -1,9 +1,10 @@
 NAME         := simp-le
 VERSION      = 20151207.ac836bc
 _COMMIT      := ac836bc0af988cb14dc0a83dc2039e7fa541b677
-ITERATION_D  := 1
+ITERATION_D  := 2
 SOURCE_URL   := https://github.com/kuba/simp_le/archive/$(_COMMIT).tar.gz
 FETCHED_FILE := $(NAME)-$(VERSION).tar.gz
+DEPENDS      := "python2.7"
 BUILDDEPENDS := "git" "python-virtualenv" "fakechroot" "python-dev" \
 	            "libssl-dev" "libffi-dev" "gcc" "ca-certificates"
 
