rubygem2.1-bundler: install alternative on /usr/bin/bundler

--- a/ubuntu_packages/rubygem2.1-bundler/Makefile
+++ b/ubuntu_packages/rubygem2.1-bundler/Makefile
@@ -1,6 +1,6 @@
 NAME         := bundler
 VERSION      = 1.12.5
-ITERATION_D  := 4
+ITERATION_D  := 5
 DEPENDS      := "ruby2.1"
 BUILDDEPENDS := "ruby2.1"
 
@@ -11,6 +11,9 @@ projects by tracking and installing the exact gems and versions that are needed.
 FPM_SOURCE := gem
 FPM_ARGS   := --gem-package-name-prefix rubygem2.1 \
               --gem-gem /opt/ruby2.1/bin/gem
+
+POSTINSTALL := postinst
+PREUNINSTALL := prerm
 
 include ../include/base.mk
 
